--- a/NodeJS/package.json
+++ b/NodeJS/package.json
@@ -6,7 +6,8 @@
   "dependencies": {},
   "devDependencies": {
     "ejs": "^2.5.6",
-    "express": "^4.14.1"
+    "express": "^4.14.1",
+    "mysql": "^2.13.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
